@@ -171,13 +171,15 @@ def additionalChannels(url, depth):
     # URL = 'http://feeds.nos.nl/journaal'
     items = SoupStrainer('item')
     for tag in BeautifulStoneSoup(urllib2.urlopen(URL).read(), parseOnlyThese=items):
-        title = tag.title.contents[0]
-        url = tag.guid.contents[0]
-        img = os.path.join(IMG_DIR, "npo_placeholder.png")
-        addLink(title, url, "playVideo", img, '')
-        i += 1
-        if i == int(depth):
-            break
+        try:
+            title = tag.title.contents[0]
+            url = tag.find('media:content')['url']
+            img = os.path.join(IMG_DIR, "npo_placeholder.png")
+            addLink(title, url, "playVideo", img, '')
+        finally:
+            i += 1
+            if i == int(depth):
+                break
 
 
 def playVideo(url):
