@@ -1,3 +1,6 @@
+[B]4.5.6[/B]
+-Fix journaal channels
+
 [B]4.5.5[/B]
 -Workaround for unplayable https urls on linux
 -Restore event and subtitled channels
